[package]
name = "wepoll-binding"
version = "3.0.0"
authors = ["Yorick Peterse <yorickpeterse@gmail.com>"]
edition = "2018"
description = "Safe bindings to the wepoll library"
repository = "https://github.com/yorickpeterse/wepoll-binding"
readme = "README.md"
license = "MPL-2.0"
keywords = ["wepoll", "poll", "windows", "epoll"]
categories = ["api-bindings", "os::windows-apis"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
wepoll-sys = "^3.0"
bitflags = "^1.0"
